# cgue18-heikousen

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  TIMETRACKING.md  build.bat  build_deps.bat  build_v8.bat  default.ini  main.cpp
docs/: cobra3_cleaned.blend  cobra3_cleaned2_textured.blend  cobra3_cleaned3_textured.blend  demo1.blend  demo1_overview.mkv  goal.blend  goal.blend1  heikousen.blend  heikousen_print.xcf  roundcube.blend  roundcube.blend1  ship.blend  ship.blend1  ship_modapplied.blend  ship_modapplied.blend1  skybox.blend
fonts/: font.json
include/: INIReader.h  debug_trap.h  tiny_gltf.h
maps/: 1.bsp  1.tex  2.bsp  2.tex  heikousen.bsp
models/: cobra3_cleaned2_textured.glb  cobra3_cleaned3_textured.glb  goal.glb  icosphere.glb  roundcube.glb  ship.glb  skybox.glb  uvcube.glb
scripts/: hello.js
shader/: deferred.frag  dof.frag  dynamic.frag  dynamic.vert  hdr.frag  level.frag  level.vert  logluv.frag  logluv.vert  phong.frag  phong.vert  shader.frag  shader.vert  text.frag  text.vert  text_simple.frag  text_simple.vert  text_simplest.frag  text_simplest.vert  transparent.frag  transparent.vert
src/: jojo_bsp.cpp  jojo_bsp.hpp  jojo_data.cpp  jojo_data.hpp  jojo_engine.cpp  jojo_engine.hpp  jojo_engine_helper.cpp  jojo_engine_helper.hpp  jojo_level.cpp  jojo_level.hpp  jojo_object.cpp  jojo_physics.cpp  jojo_physics.hpp  jojo_physics_node.cpp  jojo_physics_node.hpp  jojo_pipeline.cpp  jojo_pipeline.hpp  jojo_replay.cpp  jojo_replay.hpp  jojo_scene.cpp  jojo_scene.hpp  jojo_script.cpp  jojo_script.hpp  jojo_swapchain.cpp  jojo_swapchain.hpp  jojo_text.hpp  jojo_utils.cpp  jojo_utils.hpp  jojo_vulkan.cpp  jojo_vulkan.hpp  jojo_vulkan_attachments.cpp  jojo_vulkan_data.cpp  jojo_vulkan_data.hpp  jojo_vulkan_debug.cpp  jojo_vulkan_debug.h  jojo_vulkan_debug.hpp  jojo_vulkan_info.cpp  jojo_vulkan_info.hpp  jojo_vulkan_pass.cpp  jojo_vulkan_pass.hpp  (+7 more)
src/Common/: ErrorHandling.h
src/Rendering/: DescriptorSets.cpp  DescriptorSets.h
